--- a/IT_Tech_Styles.css
+++ b/IT_Tech_Styles.css
@@ -1,5 +1,5 @@
 :root {
-    --blueColor: #5f0cad;
+    --blueColor: #943ee4;
 }
 
 * {
@@ -139,8 +139,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: left;
+    align-items: center;
     transition: 0.3s ease-in;
+    text-align: center;
 }
 
 .cards:hover {
@@ -148,15 +149,29 @@
     transition: all 0.3 ease-in;
 }
 
+.cards:hover #theHeader {
+    opacity:1;
+    transform: scale(1.05);
+    transition: all 0.3 ease-in;
+}
+
 .cards h2 {
-    position:absolute;
+    opacity:0;
+    z-index:300;
+    position: center;
     font-size: 30px;
     text-align: center;
 }
 
+.cards img:hover {
+    opacity:1;
+    transition: all 0.3 ease-in;
+}
+
 .cards img {
+    z-index: 100;
     position:sticky;
-    filter: blur(3px);
+    opacity:0.5;
     font-size: 30px;
 }
 
@@ -165,6 +180,6 @@
 }
 
 .info-wrapper {
-    padding: 10px;
+    padding:;
 }
 
