--- a/IT_Tech_Page.css
+++ b/IT_Tech_Page.css
@@ -10,9 +10,7 @@
     scroll-behavior: smooth;
 }
 
-.highlight{
-    border-bottom: 4px solid var(--blueColor);
-}
+
 .navbar {
     background-color: #131313;
     height: 80px;
@@ -65,8 +63,7 @@
     width: 125px;
     text-decoration: none;
     height: 80px;
-    transition: all 0.3s ease
-    border-bottom: 4px solid
+    transition: all 0.3s ease;
 }
 
 .nav_links:hover {
@@ -131,16 +128,13 @@
 }
 
 .cards {
-    font;
-    margin: 
     height: 300px;
     width: 1200px;
     border-radius: 4px;
     display: flex;
-    flex-direction: column;
-    justify-content:inter-word
+    justify-content:inter-word;
     transition: 0.3s ease-in;
-    text-align:justify
+    text-align:justify;
 }
 
 .borderNeeded {
@@ -149,26 +143,16 @@
     border-color:black;
 }
 
-.cards h2 {
-    font-family: var(--)
-    position: absolute;
-    font-size: 30px;
-    text-align: center;
-}
 
 
-.cards img {
-    z-index: 100;
-    position:sticky;
-    opacity:0.5;
-    font-size: 30px;
-}
 
-.cards p {
-   
-}
 
 .info-wrapper {
     padding-bottom:100px;
+}
+
+.headings {
+    font-style:italic ;
+    padding:10px
 }
 
