--- a/crypto_styles.css
+++ b/crypto_styles.css
@@ -1,5 +1,7 @@
 :root {
     --blueColor: #943ee4;
+    --blackColor: #131313;
+    --whiteColor: #fff; 
 }
 
 * {
@@ -13,6 +15,54 @@
 .highlight{
     border-bottom: 4px solid var(--blueColor);
 }
+
+/* dropdown Section */
+.dropdown {
+    position: relative;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+    opacity:1;
+    transform: translateY(0);
+    pointer-events: auto;
+}
+
+.dropdown-menu {
+    padding: 0px 10px 10px 5px;
+    border-bottom-left-radius: 10%;
+    border-bottom-right-radius: 10%;
+    position: absolute;
+    color: var(--whiteColor);
+    left: 1.2rem;
+    top: 100%;
+    background-color: var(--blackColor);
+    opacity: 0;
+    transition: 0.3s ease-in, transform 0.15s ease-in;
+    transform: translateY(-13px);
+    pointer-events: none;
+}
+
+
+.dropdown-item  {
+    display:flex;
+    align-items:left;
+    flex-direction: column;
+    padding: 7px;
+
+}
+.dropdown-links {
+    text-decoration: none;
+    color: var(--whiteColor);
+    transition: 0.3s ease-in-out;
+}
+.dropdown-links:hover {
+    color: var(--blueColor);
+}
+.dropdown-content {
+    list-style: none;
+}
+
 .navbar {
     background-color: #131313;
     height: 80px;
@@ -127,39 +177,45 @@
 
 .wrapper {
     display: grid;
-    gap:20px;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr
 }
 
 .cards {
-    opacity:0.5;
-    margin: 10px;
+    font;
+    margin: 
     height: 300px;
-    width: 515px;
+    width: 1200px;
     border-radius: 4px;
-    display:flex;
-    justify-items: center;
+    display: flex;
     flex-direction: column;
+    justify-content:inter-word
     transition: 0.3s ease-in;
-    
+    text-align:justify
 }
 
-.cards:hover {
-    opacity:1;
-    transform: scale(1.05);
-    transition: all 0.3 ease-in;
-}
-
-.cards:hover #theHeader {
-    opacity:1;
-    transform: scale(1.05);
-    transition: all 0.3 ease-in;
+.borderNeeded {
+    padding:10px;
+    border-style:solid;
+    border-color:#000000;
 }
 
 .cards h2 {
-    opacity:0;
-    z-index:300;
+    font-family: var(--)
+    position: absolute;
     font-size: 30px;
-    text-align:center;
+    text-align: center;
 }
+
+
+.cards img {
+    z-index: 100;
+    position:sticky;
+    opacity:0.5;
+    font-size: 30px;
+}
+
+
+.info-wrapper {
+    padding-bottom:100px;
+}
+
