--- a/team_styles.css
+++ b/team_styles.css
@@ -1,7 +1,54 @@
 :root {
-    --blueColor: #943ee4;
+    --blueColor: #518b5b;
+	--blackColor: #131313;
+    --whiteColor: #fff;
+}
+/* dropdown Section */
+.dropdown {
+    position: relative;
 }
 
+.dropdown:hover .dropdown-menu {
+    display: block;
+    opacity:1;
+    transform: translateY(0);
+    pointer-events: auto;
+}
+
+.dropdown-menu {
+    padding: 0px 10px 10px 5px;
+    border-bottom-left-radius: 10%;
+    border-bottom-right-radius: 10%;
+    position: absolute;
+    color: var(--whiteColor);
+    left: 1.2rem;
+    top: 100%;
+    background-color: var(--blackColor);
+    opacity: 0;
+    transition: 0.3s ease-in, transform 0.15s ease-in;
+    transform: translateY(-13px);
+    pointer-events: none;
+}
+
+
+.dropdown-item  {
+    display:flex;
+    align-items:left;
+    flex-direction: column;
+    padding: 7px;
+
+}
+.dropdown-links {
+    text-decoration: none;
+    color: var(--whiteColor);
+    transition: 0.3s ease-in-out;
+}
+.dropdown-links:hover {
+    color: var(--blueColor);
+}
+.dropdown-content {
+    list-style: none;
+}
 * {
     box-sizing: border-box;
     margin: 0;
@@ -127,16 +174,15 @@
 
 .wrapper {
     display: grid;
-    gap:20px;
+		gap: 40px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
 }
 
 .cards {
-    opacity:0.5;
     margin: 10px;
     height: 300px;
-    width: 515px;
+    width: 250px;
     border-radius: 4px;
     display:flex;
     justify-items: center;
