--- a/Ideal_Job_Styles.css
+++ b/Ideal_Job_Styles.css
@@ -1,5 +1,54 @@
 :root {
-    --blueColor: #369ceb;
+    --blueColor: #518b5b;
+	--blackColor: #131313;
+    --whiteColor: #fff;
+}
+
+/* dropdown Section */
+.dropdown {
+    position: relative;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+    opacity:1;
+    transform: translateY(0);
+    pointer-events: auto;
+}
+
+.dropdown-menu {
+    padding: 0px 10px 10px 5px;
+    border-bottom-left-radius: 10%;
+    border-bottom-right-radius: 10%;
+    position: absolute;
+    color: var(--whiteColor);
+    left: 1.2rem;
+    top: 100%;
+    background-color: var(--blackColor);
+    opacity: 0;
+    transition: 0.3s ease-in, transform 0.15s ease-in;
+    transform: translateY(-13px);
+    pointer-events: none;
+}
+
+
+.dropdown-item  {
+    display:flex;
+    align-items:left;
+    flex-direction: column;
+    padding: 7px;
+
+}
+.dropdown-links {
+    text-decoration: none;
+    color: var(--whiteColor);
+    transition: 0.3s ease-in-out;
+}
+.dropdown-links:hover {
+    color: var(--blueColor);
+}
+.dropdown-content {
+    list-style: none;
 }
 
 * {
@@ -33,7 +82,7 @@
     width:100%;
     max-width: 1300px;
     margin: 0 auto;
-    padding: 0 50px;
+    padding: 0 35px;
 }
 
 #team_name {
@@ -227,13 +276,14 @@ a{
 
 h1{
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 50px;
+  font-size: 30px;
   font-style: italic;
   font-weight: 100;
-  text-align: center;
-  letter-spacing: 5px;
+  text-align: left;
+  letter-spacing: 2px;
   margin-left: 100px;
   margin-right: 100px;
+  padding-top:50px;
 
 }
 
@@ -244,5 +294,5 @@ p{
     font-weight: 100;
     margin-left: 100px;
     margin-right: 100px;
-    align-items: center;
+    align-items: justify;
 }
