--- a/robots_style.css
+++ b/robots_style.css
@@ -1,7 +1,7 @@
 :root {
-    --blueColor: #b9344a;
+    --blueColor: #943ee4;
     --blackColor: #131313;
-    --whiteColor: #fff;
+    --whiteColor: #fff; 
 }
 
 * {
@@ -68,6 +68,7 @@
     text-decoration: none;
     height: 80px;
     transition: all 0.3s ease
+    border-bottom: 4px solid
 }
 
 .nav_links:hover {
@@ -84,7 +85,7 @@
 
 .team_section {
     background: var(--blueColor);
-    padding: 200px 0;
+    padding: 60px 0;
 }
 
 .container {
@@ -106,69 +107,6 @@
 
 .team_description {
     font-size: 40px;
-}
-
-/* Personal Info Section */
-
-.personal_info {
-    background: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    padding: 10rem 0;
-}
-
-.personal_info h1 {
-    color: #131313;
-    font-size: 2.5rem;
-    padding-bottom: 50px;
-}
-
-.wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-}
-
-
-
-.cards {
-    background-color: var(--whiteColor);
-    margin: 10px;
-    height: 400px;
-    width: 800px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transition: 0.3s ease-in;
-  
-}
-
-
-
-
-
-.cards h2 {
-    color: #fff;
-    background: #b9344a;
-    padding: 10px 20px;
-    justify-content: center;
-    align-items: center;
-    font-size: 50px;
-    font-weight: 700;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom: 20px solid #b9344a ;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
- 
-}
-
-a{
-    text-decoration: none;
 }
 
 /* dropdown Section */
@@ -217,87 +155,69 @@ a{
 .dropdown-content {
     list-style: none;
 }
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Kumbh Sans', sans-serif;
-    scroll-behavior: smooth;
+
+/* Personal Info Section */
+
+.personal_info {
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 10rem 0;
+}
+
+.personal_info h1 {
+    color: #131313;
+    font-size: 2.5rem;
+    padding-bottom: 50px;
+}
+
+.wrapper {
+    display: grid;
+    grid-template-columns: 1fr
+}
+
+.cards {
+    font;
+    margin: 
+    height: 300px;
+    width: 1200px;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content:inter-word
+    transition: 0.3s ease-in;
+    text-align:justify
+}
+
+.borderNeeded {
+    padding:10px;
+    border-style:solid;
+    border-color:black;
+}
+
+.cards h2 {
+    font-family: var(--)
+    position: absolute;
+    font-size: 30px;
+    text-align: center;
+}
+
+
+.cards img {
+    z-index: 100;
+    position:sticky;
+    opacity:0.5;
+    font-size: 30px;
 }
 
 .cards p {
-    padding: 10px;
+   
 }
 
 .info-wrapper {
-    padding: 10px;
+    padding-bottom:100px;
 }
 
-.cards ul{
-    position: relative;
-    background: #fff;
-}
-
-.cards ul li{
-    list-style: none;
-    padding: 10px;
-    width: 100%;
-    background: #fff;
-    text-shadow: 0 5px 25px rgba(0,0,0,.1)
-    transition: transform;
-}
-
-.cards ul:hover li{
-    opacity: 0.2;
-}
-
-.cards ul li:hover{
-    transform: scale(1.1);
-    z-index: 100;
-    background: #b9344a;
-    text-shadow: 0 5px 25px rgba(0,0,0,.1)
-    color: #fff;
-    opacity: 1.3;
-}
-
-.cards ul li span{
-    width: 20px;
-    height: 20px;
-    text-align: center;
-    line-height: 20px;
-    background: #b9344a;
-    color: #fff;
-    display: inline-block;
-    border-radius: 50%;
-    margin-right: 10px;
-    font-size: 10px;
-    font-weight: 600;
-    transform: translateY(-2px);
-}
-
-
-.cards ul li:hover span{
-    background: #fff;
-    color: #b9344a;
-}
-
-h1{
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 50px;
-  font-style: italic;
-  font-weight: 100;
-  text-align: center;
-  letter-spacing: 5px;
-  margin-left: 100px;
-  margin-right: 100px;
-
-}
-
-p{
-    font-size: 18px;
-    line-height: 35px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 100;
-    margin-left: 100px;
-    margin-right: 100px;
-}
