--- a/AI_Styles.css
+++ b/AI_Styles.css
@@ -127,39 +127,48 @@
 
 .wrapper {
     display: grid;
-    gap:20px;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr
 }
 
 .cards {
-    opacity:0.5;
-    margin: 10px;
+    font;
+    margin: 
     height: 300px;
-    width: 515px;
+    width: 1200px;
     border-radius: 4px;
-    display:flex;
-    justify-items: center;
+    display: flex;
     flex-direction: column;
+    justify-content:inter-word
     transition: 0.3s ease-in;
-    
+    text-align:justify
 }
 
-.cards:hover {
-    opacity:1;
-    transform: scale(1.05);
-    transition: all 0.3 ease-in;
-}
-
-.cards:hover #theHeader {
-    opacity:1;
-    transform: scale(1.05);
-    transition: all 0.3 ease-in;
+.borderNeeded {
+    padding:10px;
+    border-style:solid;
+    border-color:black;
 }
 
 .cards h2 {
-    opacity:0;
-    z-index:300;
+    font-family: var(--)
+    position: absolute;
     font-size: 30px;
-    text-align:center;
+    text-align: center;
 }
+
+
+.cards img {
+    z-index: 100;
+    position:sticky;
+    opacity:0.5;
+    font-size: 30px;
+}
+
+.cards p {
+   
+}
+
+.info-wrapper {
+    padding-bottom:100px;
+}
+
