--- a/Cloud_Computing_Styles.css
+++ b/Cloud_Computing_Styles.css
@@ -33,7 +33,7 @@
     width:100%;
     max-width: 1300px;
     margin: 0 auto;
-    padding: 0 50px;
+    padding: 0 35px;
 }
 
 #team_name {
@@ -65,8 +65,8 @@
     width: 125px;
     text-decoration: none;
     height: 80px;
-    transition: all 0.3s ease;
-    border-bottom: 4px solid;
+    transition: all 0.3s ease
+    border-bottom: 4px solid
 }
 
 .nav_links:hover {
@@ -131,13 +131,14 @@
 }
 
 .cards {
-
+    font;
+    margin: 
     height: 300px;
     width: 1200px;
     border-radius: 4px;
     display: flex;
     flex-direction: column;
-    justify-content:inter-word;
+    justify-content: inter-word
     transition: 0.3s ease-in;
     text-align:justify
 }
@@ -148,6 +149,12 @@
     border-color:black;
 }
 
+.cards h2 {
+    font-family: var(--)
+    position: absolute;
+    font-size: 30px;
+    text-align: center;
+}
 
 
 .cards img {
@@ -157,7 +164,9 @@
     font-size: 30px;
 }
 
-
+.cards p {
+   
+}
 
 .info-wrapper {
     padding-bottom:100px;
